Fixed bug #24220 (range() didn't handle numeric strings correctly)